--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+
     android:padding="8dp">
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="98dp"
+        android:layout_height="89dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/ic_launcher_background" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="242dp"
         android:layout_height="wrap_content"
-        android:text="Title"/>
+        android:orientation="vertical"
+
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="278dp"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Title" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="278dp"
+            android:textSize="20dp"
+            android:layout_height="wrap_content"
+            android:text="Date" />
+    </LinearLayout>
 </LinearLayout>
